<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/pixel_google" />

            <TextView
                style="@style/TextContent.Small.white"
                android:layout_gravity="bottom"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/transparent_black"
                android:drawableLeft="@drawable/ic_collections_white_18dp"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/_6_photos"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
        </FrameLayout>

        <TextView
            style="@style/TextContent.black"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/_732"
            android:textSize="32sp" />

        <TextView
            style="@style/TextContent.Subtitle"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/stock_hanya_5_buah" />

        <TextView
            style="@style/TextContent"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1"
            android:text="@string/content_text" />

        <TextView
            style="@style/TextContent.Subtitle"
            android:text="@string/specification" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="Display" />

                <TextView
                    style="@style/TextSpec.value"
                    android:text="@string/content_spec_display" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec"
                    android:text="@string/size" />

                <TextView
                    style="@style/TextSpec.value"
                    android:text="@string/conten_spec_size" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/baterry" />

                <TextView
                    style="@style/TextSpec.value"
                    android:text="@string/content_spec_battery" />
            </TableRow>

        </TableLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profil_image"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="16dp"
                android:src="@drawable/photo_2" />

            <TextView
                style="@style/TextContent"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/profil_image"
                android:text="@string/narenda_wicaksono" />
        </RelativeLayout>

        <Button
            style="@style/ButtonGeneral"
            android:text="@string/beli" />




    </LinearLayout>



</ScrollView>