<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/vertical_margin"
    android:clickable="true"
    android:background="?attr/selectableItemBackground"
    card_view:cardCornerRadius="@dimen/vertical_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="@dimen/vertical_margin">

        <ImageView
            android:id="@+id/imageview_listfilm"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:contentDescription="Poster"
            android:scaleType="centerCrop"
            tools:src="@color/colorAccent" />

        <TextView
            android:id="@+id/tv_namafilm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/vertical_margin"
            android:layout_toRightOf="@+id/imageview_listfilm"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="@string/nama_film" />

        <TextView
            android:id="@+id/tv_tglrilis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_namafilm"
            android:layout_marginLeft="@dimen/vertical_margin"
            android:layout_toEndOf="@+id/imageview_listfilm"
            android:textSize="12sp"
            android:textStyle="italic"
            tools:text="@string/tglrilis" />

        <TextView
            android:id="@+id/tv_deskripsifilm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_tglrilis"
            android:layout_marginLeft="@dimen/vertical_margin"
            android:layout_marginTop="@dimen/horizontal_margin"
            android:layout_toEndOf="@+id/imageview_listfilm"
            android:ellipsize="end"
            android:maxLines="4"
            android:textColor="@color/black"
            tools:text="@string/deskripsifilm" />

        <Button
            android:id="@+id/btn_detil"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/vertical_margin"
            android:layout_toEndOf="@+id/imageview_listfilm"
            android:text="@string/detil_movie" />
        <Button
            android:id="@+id/btn_detil2"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/btn_detil"
            android:text="Test" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>